# gh-dashboard

./: .editorconfig  .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  DECISIONS.md  PLAN.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  github.rs  lib.rs  main.rs
src/api/: client.ts
src/api/queries/: orgMembers.ts  orgProjects.ts  prAwaitingReview.ts  projectActiveItems.ts  projectAssignedItems.ts  projectItems.ts  projectKanban.ts  projectTestingItems.ts  viewer.ts
src/auth/: LoginScreen.tsx  config.ts  deviceFlow.ts  tokenStorage.ts  useAuth.ts  useViewer.ts
src/db/: connection.ts  projectItems.ts  projectStatusOptions.ts  syncState.ts
src/features/assigned-by-me/: AssignedByMeWidget.tsx  useAssignedByMe.ts
src/features/kanban/: KanbanWidget.tsx  useProjectKanban.ts
src/features/my-tasks/: MyTasksWidget.tsx  useMyTasks.ts
src/features/pr-review/: PrAwaitingReviewWidget.tsx  usePrAwaitingReview.ts
src/features/team-view/: TeamScreen.tsx  (+2 more)
src/hooks/: cache.ts  rateLimit.ts  useFanout.ts
src/lib/: logger.ts
src/settings/: SettingsScreen.tsx  settingsStore.ts  useOrgProjects.ts  useSettings.ts
src/sync/: itemStore.ts  orchestrator.ts  projectSync.ts  useItems.ts  useProjectSync.ts
src/ui/: SyncControl.tsx  TopNav.tsx  UpdatedAgo.tsx
(+4 files in other folders)
